Make tests works with java 10